# calamares

./: .travis.yml  CMakeLists.txt  README.md  settings.conf
CMakeModules/: FindPythonQt.cmake
data/: calamares.desktop
src/branding/manjaro/: branding.desc  show.qml
src/branding/manjaro-kde/: branding.desc
src/branding/manjaro-xfce/: branding.desc
src/branding/syncretic/: branding.desc
src/calamares/: CalamaresWindow.cpp
src/libcalamares/utils/: CalamaresUtilsSystem.cpp
src/libcalamaresui/: Branding.cpp  CMakeLists.txt  ViewManager.cpp
src/libcalamaresui/utils/: CalamaresUtilsGui.h
src/modules/bootloader/: bootloader.conf  main.py
src/modules/chrootcfg/: main.py
src/modules/displaymanager/: main.py
src/modules/fstab/: main.py
src/modules/grubcfg/: main.py
src/modules/initcpiocfg/: main.py
src/modules/keyboard/: KeyboardPage.cpp  KeyboardPage.h  kbd-model-map
src/modules/locale/: LocalePage.cpp  locale.conf
src/modules/localecfg/: main.py
src/modules/luksbootkeyfile/: main.py
src/modules/luksopenswaphookcfg/: main.py
src/modules/mhwdcfg/: main.py
src/modules/networkcfg/: main.py
src/modules/openrcdmcryptcfg/: main.py
src/modules/partition/: CMakeLists.txt
src/modules/postcfg/: main.py
src/modules/services/: main.py  services.conf
src/modules/servicescfg/: main.py
src/modules/users/: CMakeLists.txt  CreateUserJob.cpp  PasswordTests.cpp  UsersViewStep.cpp  users.conf
src/modules/users/gui/: UsersPage.cpp  UsersPage.h
src/modules/users/jobs/: CreateUserJob.cpp  CreateUserJob.h  SetHostNameJob.cpp  SetPasswordJob.cpp
(+16 files in other folders)
